--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -115,7 +115,7 @@
 							<h2><span class="underlined-heading">Hate and NuT</span></h2>
 							<ul>
 								<li><a href="{% url "archive_index" %}">Archive</a></li>
-								
+								<li><a href="{% url "characters_index" %}">Characters</a></li>
 							</ul>
 						</nav>
 					</div>
