--- a/assets/themes/hancom/templates/characters/index.html
+++ b/assets/themes/hancom/templates/characters/index.html
@@ -19,4 +19,9 @@
 			</li>
 		{% endfor %}
 	</ul>
+	
+	<hr/>
+	<section class="footnotes">
+		<p id="#foot-1">The author admits to not really knowing a lot about Harry Potter.<a href="#ret-1">1</a></p>
+	</section>
 {% endblock %}
