--- a/assets/themes/hancom/templates/characters/index.html
+++ b/assets/themes/hancom/templates/characters/index.html
@@ -22,6 +22,6 @@
 	
 	<hr/>
 	<section class="footnotes">
-		<p id="#foot-1">The author admits to not really knowing a lot about Harry Potter.<a href="#ret-1">1</a></p>
+		<p id="foot-1"><a href="#ret-1">The author admits to not really knowing a lot about Harry Potter.<sup>1</a></sup></p>
 	</section>
 {% endblock %}
