--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -115,7 +115,26 @@
 	.character-description{
 		margin:3.5em 0 0;
 	}
-
+	#foot-1:target,
+	#foot-1:target a,
+	#foot-2:target,
+	#foot-2:target a,
+	#foot-3:target,
+	#foot-3:target a,
+	#foot-4:target,
+	#foot-4:target a,
+	#foot-5:target,
+	#foot-5:target a{
+		color:#fff;
+		font-weight:bold;	
+	}
+	.footnotes a,
+	.footnotes a:hover,
+	.footnotes a:link,
+	.footnotes a:active,
+	.footnotes a:visited{
+		color:#222;
+	}
 }
 
 @media all and (min-width:1024px){
