--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -128,6 +128,11 @@
 		color:#fff;
 		font-weight:bold;	
 	}
+	sup a,
+	sup a:hover,
+	sup a:visited,
+	sup a:link,
+	sup a:active,
 	.footnotes a,
 	.footnotes a:hover,
 	.footnotes a:link,
