--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -20,7 +20,7 @@
 			<ul class="comic-nav-list">
 				<li class="comic-nav-list-item comic-nav-list-item-left">
 					{% if previous_comic %}
-						<a class="comic-nav-list-item-link" href="{{ previous_comic.get_absolute_url }}" title="Previous Comic"><span class="visuallyhidden">Previous</span><i class="icon-caret-left"></i></a>
+						<a id="prevComic" class="comic-nav-list-item-link" href="{{ previous_comic.get_absolute_url }}" title="Previous Comic"><span class="visuallyhidden">Previous</span><i class="icon-caret-left"></i></a>
 					{% else %}
 						<span class="visuallyhidden">Previous</span><i class="icon-caret-left"></i>
 					{% endif %}		
