--- a/assets/themes/hancom/static/css/style.css
+++ b/assets/themes/hancom/static/css/style.css
@@ -26,6 +26,7 @@ h1{
 	margin:.5em 0;
 	font-size:1.4em;
 	font-weight:normal;
+	color:#272727;
 }
 h2{
 	margin:.4em 0;
@@ -47,10 +48,16 @@ a:link,
 a:hover,
 a:active{
 	text-decoration:none;
-	
+	color:#9a1c20;	
 }
+
 p{
 	margin:0 0 1em;
+	padding:0;
+}
+ul{
+	margin:0 0 1.2em 1.3em;
+	padding:0;
 }
 .underlined-heading{
 	border-bottom:solid 1px;
@@ -166,7 +173,11 @@ p{
 .comic-nav-list-item-right{
 	float:right;
 }
-.comic-nav-list-item-link{
+.comic-nav-list-item-link,
+.comic-nav-list-item-link:hover,
+.comic-nav-list-item-link:active,
+.comic-nav-list-item-link:visited,
+.comic-nav-list-item-link:link{
 	color:#1f1f1f;
 }
 .s{
