just a little style fidgeting

--- a/assets/themes/hancom/static/css/characters.css
+++ b/assets/themes/hancom/static/css/characters.css
@@ -20,6 +20,7 @@
 	float:left;
 	margin:0 4% 1em 0;
 	border:solid 5px #531112;
+	border:solid 5px #111;
 	border-radius:5px;
 }
 .character-description{
