Contact Me Form

--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -116,6 +116,7 @@
 							<ul>
 								<li><a href="{% url "archive_index" %}">Archive</a></li>
 								<li><a href="{% url "characters_index" %}">Characters</a></li>
+								<li><a href="{% url "contact_me" %}">Contact</a></li>
 							</ul>
 						</nav>
 					</div>
