--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -239,7 +239,7 @@
 		display:block;
 		width:20%;
 		text-align:center;
-		/*margin:-40px 0 0;*/
+		margin:-40px 0 0;
 	}
 	.pg-head-nav{
 		display:none;
