--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -111,7 +111,12 @@
 	.donate-button:active{
 		color:#fefefe;
 	}
-	
+	.comic-wide .comic{
+		max-width:100%;
+	}
+	.comic-wide{
+		overflow:visible;
+	}
 
 	
 	.character-list-item{
