No sidebar add for comic-wide pages

--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -87,7 +87,7 @@
 								</ul>
 							</aside>
 <script type="text/javascript"><!--
-	if (myViewport >= 748){
+	if (myViewport >= 748 && !($("body").hasClass("wide-comic-page"))){
 		document.write('<aside class="side-banner-medium sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="wide-skyscraper" %}"><\/aside>');
 	}//-->
 </script>
