--- a/assets/themes/hancom/static/css/archives.css
+++ b/assets/themes/hancom/static/css/archives.css
@@ -3,7 +3,10 @@
 	position:relative;
 	overflow:hidden;
 	margin:0 2% 4% 0;
-	max-width:48%;
+	width:48%;
+}
+.comic-archive-article img{
+	width:100%;		
 }
 .comic-archive-article:nth-of-type(2n){
 	margin:0 0 4% 2%;
