--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -173,7 +173,7 @@
 		color:#272727;
 	}
 	.comic-archive-article{
-		max-width:20%;
+		width:20%;
 		margin:0 3% 2% 0;
 	}
 	.comic-archive-article:nth-of-type(2n){
