--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -2,7 +2,7 @@
 
 {% block title %}The Adventures of Hate and NuT | Latest Webcomic{% endblock %}
 
-{% block body_class %}{% if latest_comic.single_row %}wide-comic-page {% endif %}{% endblock %}
+{% block body_class %}home {% if latest_comic.single_row %}wide-comic-page {% endif %}{% endblock %}
 
 {% block extra_head %}{% load static from staticfiles %}
 	
@@ -17,7 +17,14 @@
 
 {% block content %}
 	<div class="clearfix heading-wrap">
-		<h1>Latest</h1>
+		{% if latest_comic.story_arc and latest_comic.special_story_arc_title %}
+		<hgroup class="story-arc-comic-heading-group">
+			<h1>Latest</h1>
+			<h2>{{ latest_comic.special_story_arc_title }}</h2>
+		</hgroup>
+		{% else %}
+		
+		{% endif %}
 		<nav class="comic-nav">
 			<ul class="comic-nav-list">
 				<li class="comic-nav-list-item comic-nav-list-item-left">
