--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -43,7 +43,7 @@
 		display:block;
 	}
 	.header-ad{
-		margin:5px auto 20px;
+		margin:5px auto 12px;
 	}
 	.mobile-fixed-ad-wrap{
 		display:none;
@@ -204,7 +204,7 @@
 		padding:2%;
 	}
 	.pg-head-wrap{
-		padding:5px 0 60px 0;
+		padding:5px 0 65px 0;
 	}
 	.pg-404 .pg-head-wrap{
 		padding:5px 0;
@@ -222,12 +222,14 @@
 		margin:1em 0;
 	}
 	.logo{
-		max-width:270px;
+		/*max-width:270px;*/
+		height:125px;
+		max-height:none;
 		padding:.5% 1% 0;
 	}
 	.header-ad{
 		float:right;
-		margin:15px 0;
+		margin:7px 0;
 	}
 	.width{
 		max-width:1280px;
