--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -49,13 +49,21 @@
 			<div class="width">
 				<div class="pg-head">
 
-<script type="text/javascript"><!--
+<script type="text/javascript">
 	if (myViewport >= 748){
-		document.write('<aside class="banner-ad header-ad sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="leaderboard" %}"><\/aside>');
+		document.write('<aside class="banner-ad header-ad">');
+		document.write('<div id="pw_adbox_70365_5_0"></div>');
+	}
+</script>
+<script type="text/javascript"></script>
+<script type="text/javascript">
+	if (myViewport >= 748){
+		document.write('<noscript><map name="admap70365" id="admap70365"><area href="http://www.projectwonderful.com/out_nojs.php?r=0&c=0&id=70365&type=5" shape="rect" coords="0,0,728,90" title=" alt=" target="_blank" /></map><table cellpadding="0" cellspacing="0" style="width:728px;border-style:none;background-color:#ffffff;"><tr><td><img src="http://www.projectwonderful.com/nojs.php?id=70365&type=5" style="width:728px;height:90px;border-style:none;" usemap="#admap70365" alt=" /></td></tr><tr><td style="background-color:#ffffff;" colspan="1"><center><a style="font-size:10px;color:#0000ff;text-decoration:none;line-height:1.2;font-weight:bold;font-family:Tahoma, verdana,arial,helvetica,sans-serif;text-transform: none;letter-spacing:normal;text-shadow:none;white-space:normal;word-spacing:normal;" href="http://www.projectwonderful.com/advertisehere.php?id=70365&type=5" target="_blank">Ads by Project Wonderful!  Your ad here, right now: $0</a></center></td></tr></table></noscript>');
+		document.write('</aside>');
 	}
 	else if (myViewport < 748){
 		document.write('<aside class="mobile-fixed-ad-wrap"><div class="mobile-fixed-ad sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="mobile-leaderboard" %}"><\/div><\/aside>');
-	}//-->
+	}
 </script>
 					<nav class="pg-head-nav">
 						<ul class="pg-head-nav-list">
@@ -140,6 +148,27 @@
 		</footer>
 		
 		{% add_static "js" %}
-		
+<!-- Project Wonderful Ad Box Loader -->	
+<script type="text/javascript">
+	(function(){
+		function pw_load(){
+			if(arguments.callee.z)return;else arguments.callee.z=true;
+				var d=document;var s=d.createElement('script');
+				var x=d.getElementsByTagName('script')[0];
+				s.type='text/javascript';s.async=true;
+				s.src='//www.projectwonderful.com/pwa.js';
+				x.parentNode.insertBefore(s,x);
+			}
+			if (window.attachEvent){
+				window.attachEvent('DOMContentLoaded',pw_load);
+				window.attachEvent('onload',pw_load);
+			}
+			else{
+				window.addEventListener('DOMContentLoaded',pw_load,false);
+				window.addEventListener('load',pw_load,false);
+			}
+	})();
+</script>
+<!-- End Project Wonderful Ad Box Loader -->
     </body>
 </html>
