--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -53,16 +53,8 @@
 	if (myViewport >= 748){
 		document.write('<aside class="banner-ad header-ad">');
 		document.write('<div id="pw_adbox_70365_5_0"></div>');
-	}
-</script>
-<script type="text/javascript"></script>
-<script type="text/javascript">
-	if (myViewport >= 748){
 		document.write('<noscript><map name="admap70365" id="admap70365"><area href="http://www.projectwonderful.com/out_nojs.php?r=0&c=0&id=70365&type=5" shape="rect" coords="0,0,728,90" title=" alt=" target="_blank" /></map><table cellpadding="0" cellspacing="0" style="width:728px;border-style:none;background-color:#ffffff;"><tr><td><img src="http://www.projectwonderful.com/nojs.php?id=70365&type=5" style="width:728px;height:90px;border-style:none;" usemap="#admap70365" alt=" /></td></tr><tr><td style="background-color:#ffffff;" colspan="1"><center><a style="font-size:10px;color:#0000ff;text-decoration:none;line-height:1.2;font-weight:bold;font-family:Tahoma, verdana,arial,helvetica,sans-serif;text-transform: none;letter-spacing:normal;text-shadow:none;white-space:normal;word-spacing:normal;" href="http://www.projectwonderful.com/advertisehere.php?id=70365&type=5" target="_blank">Ads by Project Wonderful!  Your ad here, right now: $0</a></center></td></tr></table></noscript>');
-		document.write('</aside>');
-	}
-	else if (myViewport < 748){
-		document.write('<aside class="mobile-fixed-ad-wrap"><div class="mobile-fixed-ad sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="mobile-leaderboard" %}"><\/div><\/aside>');
+		document.write("</aside>");
 	}
 </script>
 					<nav class="pg-head-nav">
@@ -74,6 +66,16 @@
 					</nav>
 
 					<a href="{% url "home" %}"><img class="logo" title="A webcomic about a couple of rutheless killers, set in the world of Ultima Online." src="{% static "img/adv_hateandnut.png" %}" alt="Hate and Nut Logo" /></a>
+
+<script type="text/javascript">
+	if (myViewport < 748){
+		document.write('<aside class="small-header-ad">');
+		document.write('<div id="pw_adbox_70377_6_0"></div>');
+		document.write('<noscript><map name="admap70377" id="admap70377"><area href="http://www.projectwonderful.com/out_nojs.php?r=0&c=0&id=70377&type=6" shape="rect" coords="0,0,234,60" title="" alt="" target="_blank" /></map><table cellpadding="0" cellspacing="0" style="width:234px;border-style:none;background-color:#ffffff;"><tr><td><img src="http://www.projectwonderful.com/nojs.php?id=70377&type=6" style="width:234px;height:60px;border-style:none;" usemap="#admap70377" alt="" /></td></tr><tr><td style="background-color:#ffffff;" colspan="1"><center><a style="font-size:10px;color:#0000ff;text-decoration:none;line-height:1.2;font-weight:bold;font-family:Tahoma, verdana,arial,helvetica,sans-serif;text-transform: none;letter-spacing:normal;text-shadow:none;white-space:normal;word-spacing:normal;" href="http://www.projectwonderful.com/advertisehere.php?id=70377&type=6" target="_blank">Ads by Project Wonderful!  Your ad here, right now: $0</a></center></td></tr></table></noscript>');
+		document.write("</aside>");
+	}
+</script>
+
 				</div>
 			</div>
 		</header>
