--- a/assets/themes/hancom/static/css/style.css
+++ b/assets/themes/hancom/static/css/style.css
@@ -110,7 +110,12 @@ ul{
 	border-radius:5px;
 	padding:.5% 2% 0;
 	background:#fefefe;
-	
+}
+.small-header-ad{
+	width:234px;
+	height:60px;
+	overflow:hidden;
+	margin:10px 0 5px;
 }
 .banner-ad{
 	display:none;
