--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -226,8 +226,9 @@
 	}
 	.logo{
 		/*max-width:270px;*/
-		height:125px;
+		height:110px;
 		max-height:none;
+		margin:5px 0 0;
 		padding:.5% 1% 0;
 	}
 	.header-ad{
