removing automatic hashtag from tweet button

--- a/assets/themes/hancom/templates/social/comic_share_buttons.html
+++ b/assets/themes/hancom/templates/social/comic_share_buttons.html
@@ -6,8 +6,7 @@
 		data-url="{{ SITE_URL }}{{ comic.get_absolute_url }}" 
 		data-size="large" 
 		data-related="brantsteen" 
-		data-count="none"
-		data-hashtags="HateAndNuT" >Tweet</a>
+		data-count="none" >Tweet</a>
 	</li>
 	
 	<li class="share-plus">
