shortcut key icons

--- a/assets/themes/hancom/static/css/style.css
+++ b/assets/themes/hancom/static/css/style.css
@@ -159,6 +159,13 @@ ul{
 	float:right;
 	width:100px;
 }
+.comic-nav kbd{
+	vertical-align: middle;
+	margin-top:-9px;
+	font-size:.6em;
+	display:none;
+}
+
 .comic-nav-list{
 	margin:0;
 	padding:0;
