--- a/assets/themes/hancom/templates/comics/comic_page.html
+++ b/assets/themes/hancom/templates/comics/comic_page.html
@@ -37,7 +37,7 @@
 					{% if comic.is_available_to_public %}
 						{% if previous_comic %}
 							<a id="prevComic" class="comic-nav-list-item-link" href="{{ previous_comic.get_absolute_url }}" title="Previous Comic (shortcut: 'a' key)"><span class="visuallyhidden">Previous</span><i class="icon-caret-left"></i></a>
-							<kbd class="light">a</kbd>
+							<!--<kbd class="light">a</kbd>-->
 						{% else %}
 							<span class="visuallyhidden">Previous</span><i class="icon-caret-left"></i>
 						{% endif %}
@@ -51,7 +51,7 @@
 				<li class="comic-nav-list-item comic-nav-list-item-right">
 					{% if comic.is_available_to_public %}
 						{% if next_comic %}
-							<kbd class="light">s</kbd>
+							<!--<kbd class="light">s</kbd>-->
 							<a id="nextComic" class="comic-nav-list-item-link" href="{{ next_comic.get_absolute_url }}" title="Next Comic (shortcut: 's' key)"><span class="visuallyhidden">Next</span><i class="icon-caret-right"></i></a>
 						{% else %}
 							<span class="visuallyhidden">Next</span><i class="icon-caret-right"></i>
