fiddlign with layout on archive page
wasnt handling smaller-than-normal thumbnails

--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -176,8 +176,11 @@
 		color:#272727;
 	}
 	.comic-archive-article{
-		max-width:20%;
+		width:20%;
 		margin:0 3% 2% 0;
+	}
+	.comic-archive-image{
+		width:100%;
 	}
 	.comic-archive-article:nth-of-type(2n){
 		margin:0 3% 2% 0;
