lets give this a whirl on the sever

--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -89,7 +89,9 @@
 							</aside>
 <script type="text/javascript"><!--
 	if (myViewport >= 748 && !($("body").hasClass("wide-comic-page"))){
-		document.write('<aside class="side-banner-medium sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="wide-skyscraper" %}"><\/aside>');
+		document.write('<aside class="side-banner-medium">');
+		document.write('<div id="comic-rocket-box" data-comic-rocket-box="160x600"><\/div>');
+		document.write('<\/aside>');
 	}//-->
 </script>
 								
@@ -174,6 +176,13 @@
 	})();
 </script>
 <!-- End Project Wonderful Ad Box Loader -->
+
+
+<script>
+(function(d,t,p){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='http'+(d.location.protocol=='https:'?'s':'')+'://www.comic-rocket.com/metrics.js#'+(p||"");s.parentNode.insertBefore(g,s);
+})(document,'script','key=VT6H');
+</script>
+
 
     </body>
 </html>
