--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -43,9 +43,8 @@
 <script type="text/javascript">
 	if (myViewport >= 748){
 		document.write('<aside class="banner-ad header-ad">');
-		document.write('<div id="comic-rocket-box" data-comic-rocket-box="728x90"><\/div>');
-		//document.write('<div id="pw_adbox_70365_5_0"></div>');
-		//document.write('<noscript><map name="admap70365" id="admap70365"><area href="http://www.projectwonderful.com/out_nojs.php?r=0&c=0&id=70365&type=5" shape="rect" coords="0,0,728,90" title=" alt=" target="_blank" /></map><table cellpadding="0" cellspacing="0" style="width:728px;border-style:none;background-color:#ffffff;"><tr><td><img src="http://www.projectwonderful.com/nojs.php?id=70365&type=5" style="width:728px;height:90px;border-style:none;" usemap="#admap70365" alt=" /></td></tr><tr><td style="background-color:#ffffff;" colspan="1"><center><a style="font-size:10px;color:#0000ff;text-decoration:none;line-height:1.2;font-weight:bold;font-family:Tahoma, verdana,arial,helvetica,sans-serif;text-transform: none;letter-spacing:normal;text-shadow:none;white-space:normal;word-spacing:normal;" href="http://www.projectwonderful.com/advertisehere.php?id=70365&type=5" target="_blank">Ads by Project Wonderful!  Your ad here, right now: $0</a></center></td></tr></table></noscript>');
+		document.write('<div id="pw_adbox_70365_5_0"></div>');
+		document.write('<noscript><map name="admap70365" id="admap70365"><area href="http://www.projectwonderful.com/out_nojs.php?r=0&c=0&id=70365&type=5" shape="rect" coords="0,0,728,90" title=" alt=" target="_blank" /></map><table cellpadding="0" cellspacing="0" style="width:728px;border-style:none;background-color:#ffffff;"><tr><td><img src="http://www.projectwonderful.com/nojs.php?id=70365&type=5" style="width:728px;height:90px;border-style:none;" usemap="#admap70365" alt=" /></td></tr><tr><td style="background-color:#ffffff;" colspan="1"><center><a style="font-size:10px;color:#0000ff;text-decoration:none;line-height:1.2;font-weight:bold;font-family:Tahoma, verdana,arial,helvetica,sans-serif;text-transform: none;letter-spacing:normal;text-shadow:none;white-space:normal;word-spacing:normal;" href="http://www.projectwonderful.com/advertisehere.php?id=70365&type=5" target="_blank">Ads by Project Wonderful!  Your ad here, right now: $0</a></center></td></tr></table></noscript>');
 		document.write("</aside>");
 	}
 </script>
@@ -91,7 +90,7 @@
 <script type="text/javascript"><!--
 	if (myViewport >= 748 && !($("body").hasClass("wide-comic-page"))){
 		document.write('<aside class="side-banner-medium">');
-		//document.write('<div id="comic-rocket-box" data-comic-rocket-box="160x600"><\/div>');
+		document.write('<div id="comic-rocket-box" data-comic-rocket-box="160x600"><\/div>');
 		document.write('<\/aside>');
 	}//-->
 </script>
