"The adventures" to "Adventures"
and some metadata updates

--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}The Adventures of Hate and NuT | Latest Webcomic{% endblock %}
+{% block title %}Adventures of Hate and NuT | Latest Webcomic{% endblock %}
 
 {% block body_class %}home {% if latest_comic.single_row %}wide-comic-page {% endif %}{% endblock %}
 
@@ -10,7 +10,7 @@
 		<link rel="prefetch" href="{{ previous_comic.get_absolute_url }}" />
 	{% endif %}
 	
-	<meta property="og:title" content="The Adventures of Hate and NuT" />
+	<meta property="og:title" content="Adventures of Hate and NuT" />
 	<meta property="og:image" content="{{ SITE_URL }}{% static "img/OG_image_home.jpg" %}" /> 
 	<meta property="og:description" content="A webcomic about a couple of rutheless killers, set in the world of Ultima Online." /> 
 {% endblock %}
